OAuthProxy/https-edge/dc-cakephp-mysql-example.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: cakephp-mysql-example
    template: cakephp-mysql-example
  name: cakephp-mysql-example
spec:
  replicas: 1
  selector:
    name: cakephp-mysql-example
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      pre:
        execNewPod:
          command:
          - ./migrate-database.sh
          containerName: cakephp-mysql-example
        failurePolicy: Retry
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        name: cakephp-mysql-example
      name: cakephp-mysql-example
    spec:
      containers:
      - args:
        - -provider=openshift
        - -http-address=:4180
        - -https-address=:9090
        - -tls-cert=/tls/tls.crt
        - -tls-key=/tls/tls.key
        - -upstream=http://localhost:8080
        - -openshift-service-account=oauth-proxy
        - -cookie-secret=SECRET
        - -cookie-name=oauth-proxy
        - -skip-auth-regex=^/metrics
        - -cookie-secure=false
        - '--openshift-delegate-urls={"/": {"namespace": "oauth-proxy", "resource":
          "services", "verb": "get"}}'
        - '--openshift-sar={"namespace": "oauth-proxy", "resource": "services", "verb":
          "get"}'
        image: quay.io/openshift/origin-oauth-proxy:4.9.0
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 4180
          name: http-proxy
          protocol: TCP
        - containerPort: 9090
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tls
          name: oauth-proxy-tls-secret
      - env:
        - name: DATABASE_SERVICE_NAME
          value: mysql
        - name: DATABASE_ENGINE
          value: mysql
        - name: DATABASE_NAME
          value: default
        - name: DATABASE_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: cakephp-mysql-example
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: cakephp-mysql-example
        - name: CAKEPHP_SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              key: cakephp-secret-token
              name: cakephp-mysql-example
        - name: CAKEPHP_SECURITY_SALT
          valueFrom:
            secretKeyRef:
              key: cakephp-security-salt
              name: cakephp-mysql-example
        - name: OPCACHE_REVALIDATE_FREQ
          value: "2"
        image: image-registry.openshift-image-registry.svc:5000/oauth-proxy/cakephp-mysql-example@sha256:b276ae3ac1a8a279ec9c67117b78bfaa3b49b4e9c5c403cddac9a976e218c3b6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health.php
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 3
        name: cakephp-mysql-example
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health.php
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: oauth-proxy
      serviceAccountName: oauth-proxy
      terminationGracePeriodSeconds: 30
      volumes:
      - name: oauth-proxy-tls-secret
        secret:
          defaultMode: 420
          secretName: oauth-proxy-tls-secret
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - cakephp-mysql-example
      from:
        kind: ImageStreamTag
        name: cakephp-mysql-example:latest
        namespace: oauth-proxy
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/oauth-proxy/cakephp-mysql-example@sha256:b276ae3ac1a8a279ec9c67117b78bfaa3b49b4e9c5c403cddac9a976e218c3b6
    type: ImageChange
  - type: ConfigChange
